--- a/nodejs/1.9 模板引擎.md
+++ b/nodejs/1.9 模板引擎.md
@@ -9,3 +9,61 @@ ejs
 
 模板引擎怎么用
 
+Step1:
+app.set('views',path.join('__dirname','views'));  //设置模板文件夹路径
+
+Step2:
+app.set('view engine','ejs'); //设置模板引擎为ejs
+
+
+const express = require('express')
+const router = express.Router()
+
+router.get('/:name', function (req, res) {
+  res.render('users', {
+    name: req.params.name
+  })
+})
+
+module.exports = router
+
+通过调用 res.render 函数渲染 ejs 模板，res.render 第一个参数是模板的名字，这里是 users 则会匹配 views/users.ejs，第二个参数是传给模板的数据，这里传入 name，则在 ejs 模板中可使用 name。res.render 的作用就是将模板和数据结合生成 html，同时设置响应头中的 Content-Type: text/html，告诉浏览器我返回的是 html，不是纯文本，要按 html 展示
+
+* ejs 有 3 种常用标签：
+
+<% code %>：运行 JavaScript 代码，不输出
+<%= code %>：显示转义后的 HTML内容
+<%- code %>：显示原始 HTML 内容
+注意：<%= code %> 和 <%- code %> 都可以是 JavaScript 表达式生成的字符串，当变量 code 为普通字符串时，两者没有区别。当 code 比如为 <h1>hello</h1> 这种字符串时，<%= code %> 会原样输出 <h1>hello</h1>，而 <%- code %> 则会显示 H1 大的 hello 字符串。
+
+
+includes
+我们使用模板引擎通常不是一个页面对应一个模板，这样就失去了模板的优势，而是把模板拆成可复用的模板片段组合使用，如在 views 下新建 header.ejs 和 footer.ejs，并修改 users.ejs：
+
+views/header.ejs
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <style type="text/css">
+      body {padding: 50px;font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;}
+    </style>
+  </head>
+  <body>
+views/footer.ejs
+
+  </body>
+</html>
+views/users.ejs
+
+<%- include('header') %>
+  <h1><%= name.toUpperCase() %></h1>
+  <p>hello, <%= name %></p>
+<%- include('footer') %>
+我们将原来的 users.ejs 拆成出了 header.ejs 和 footer.ejs，并在 users.ejs 通过 ejs 内置的 include 方法引入，从而实现了跟以前一个模板文件相同的功能。
+
+* 小提示：拆分模板组件通常有两个好处：
+
+模板可复用，减少重复代码
+主模板结构清晰
+注意：要用 <%- include('header') %> 而不是 <%= include('header') %>
