--- a/nodejs/blog/遇到的问题.md
+++ b/nodejs/blog/遇到的问题.md
@@ -6,3 +6,14 @@
 2. 中间件 `check.js` 中 `funtion`后面一定要加方法名吗 ？
 3. `提示模板文件不存在`，但模板文件是存在的 一般是什么原因
 
+
+##总结:
+1. 怎么初始化一个node项目环境? (常用的node命令)
+2. 怎么用Express框架搭建一个简单的Web服务器?
+3. 常用的搭配express框架的库有哪些?  都是做什么用的?
+4. 用nodejs设计一个博客要考虑哪些事情?
+5. `mongodb`的驱动库有哪些? 优劣对比? 用法?
+
+## 延伸
+6. `KOA2`框架的使用?
+7. `promise`和`async`和`await`的用法?
