总结 “模板文件找不到的提示“解决方法

--- a/nodejs/blog/遇到的问题.md
+++ b/nodejs/blog/遇到的问题.md
@@ -4,8 +4,8 @@
 
 1. `session`和`cookie`的区别 
 2. 中间件 `check.js` 中 `funtion`后面一定要加方法名吗 ？
-3. `提示模板文件不存在`，但模板文件是存在的 一般是什么原因
-
+3. Q:`提示模板文件不存在`，但模板文件是存在的 一般是什么原因?
+   A: 如果提示模板文件不存在顺着这个提示找到设置模板文件的代码，`app.set('views',path.join(__dirname,'views')) ` ,这里我把path.join(path,stirng[])的参数写反了，导致一直提示模板文件不存在，注意join()方法的第一个参数是路径，第二个才是路径的位置。debug的方法就是提示什么错误想到和整个错误相关的代码设置，然后顺着这个路走下去
 
 ##总结:
 1. 怎么初始化一个node项目环境? (常用的node命令)
